[gd_scene load_steps=5 format=3 uid="uid://b7wq4lqjk44t"]

[ext_resource type="Script" path="res://src/ConfirmQuit.gd" id="1_q072q"]
[ext_resource type="Texture2D" uid="uid://dqxam3jth1bbx" path="res://media/pquitquestionex.png" id="2_sl7l4"]
[ext_resource type="Texture2D" uid="uid://cwuudkf8c7qg2" path="res://media/pyesex.png" id="3_t4fgf"]
[ext_resource type="Texture2D" uid="uid://b2exw375ivkb1" path="res://media/pnoex.png" id="4_wrqv0"]

[node name="ConfirmQuit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q072q")

[node name="Pquitquestionex" type="Sprite2D" parent="."]
position = Vector2(960, 597)
texture = ExtResource("2_sl7l4")

[node name="Yes" type="Button" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 597.0
offset_right = 915.0
offset_bottom = 638.0
icon = ExtResource("3_t4fgf")
flat = true

[node name="No" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 597.0
offset_right = 1079.0
offset_bottom = 638.0
icon = ExtResource("4_wrqv0")
flat = true

[connection signal="mouse_entered" from="Yes" to="." method="_on_yes_mouse_entered"]
[connection signal="mouse_exited" from="Yes" to="." method="_on_yes_mouse_exited"]
[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="mouse_entered" from="No" to="." method="_on_no_mouse_entered"]
[connection signal="mouse_exited" from="No" to="." method="_on_no_mouse_exited"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
